<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="cryp" translatable="false">Cryp</string>
    <string name="cryp_pro" translatable="false">Cryp PRO</string>

    <string name="bitcoin" translatable="false">Bitcoin</string>
    <string name="litecoin" translatable="false">Litecoin</string>
    <string name="ethereum" translatable="false">Ethereum</string>

    <string name="total_balance">Total balance</string>
    <string name="add_wallet">Add wallet</string>
    <string name="tap_to_scan">Tap to scan</string>
    <string name="tap_to_copy">Tap to copy</string>
    <string name="tap_to_see_address">Tap to see the address</string>
    <string name="copied">Copied</string>
    <string name="public_key">Public Key</string>
    <string name="fixed_balance">Fixed balance</string>
    <string name="cryptocurrency_public_key">%s Public Key</string>
    <string name="type_or_scan_public_key">Type or scan your Public Key</string>
    <string name="invalid_balance">Invalid balance</string>
    <string name="wallet_saved">Wallet saved</string>
    <string name="wallet_already_saved">Wallet already saved</string>
    <string name="invalid_public_key">Invalid %s Public Key</string>
    <string name="server_unavailable_try_later">Server unavailable, try again later</string>
    <string name="are_you_sure_remove_wallet">Are you sure you want to remove this wallet from app?</string>
    <string name="wallet_removed">Wallet removed</string>
    <string name="wallet_not_found">Wallet not found</string>
    <string name="yes_please">Yes, please</string>
    <string name="nevermind">Nevermind</string>
    <string name="point_camera_qrcode">Point the camera at the QR Code</string>
    <string name="connect_internet">Connect to the internet</string>
    <string name="no_wallet_yet">No wallet, yet</string>
    <string name="tap_plus_to_add">Tap on \"+\" to add one!</string>
    <string name="validating_public_key">Validating Public Key…</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="about">About</string>
    <string name="language">Language</string>
    <string name="currency">Currency</string>
    <string name="cryptocurrency_unit">Cryptocurrency unit</string>
    <string name="app_version">App version</string>
    <string name="share">Share</string>
    <string name="you_should_try_crp">You should try Cryp for Android, the best cryptocurrency portfolio tracker ever!</string>
    <string name="help_sharing_app">Help by sharing the app</string>
    <string name="review">Review</string>
    <string name="give_5_stars">Give 5 stars to Cryp!</string>
    <string name="contact">Contact</string>
    <string name="send_me_email">Send me an email</string>
    <string name="donate">Donate</string>
    <string name="coin_balance_auto_updated">This coin\'s balance is auto updated</string>
    <string name="select_cryptocurrency">Select cryptocurrency</string>

    <string-array name="language_titles">
        <item>English</item>
        <item>Português</item>
    </string-array>
    <string-array name="language_values">
        <item>en</item>
        <item>pt</item>
    </string-array>

    <string-array name="supported_currencies">
        <item>afn</item>
        <item>all</item>
        <item>dzd</item>
        <item>aoa</item>
        <item>ars</item>
        <item>amd</item>
        <item>aud</item>
        <item>azn</item>
        <item>bsd</item>
        <item>bhd</item>
        <item>bdt</item>
        <item>bbd</item>
        <item>byr</item>
        <item>btn</item>
        <item>bob</item>
        <item>bam</item>
        <item>bwp</item>
        <item>brl</item>
        <item>gbp</item>
        <item>bnd</item>
        <item>bgn</item>
        <item>bif</item>
        <item>khr</item>
        <item>cad</item>
        <item>xaf</item>
        <item>clp</item>
        <item>cny</item>
        <item>cop</item>
        <item>crc</item>
        <item>hrk</item>
        <item>cuc</item>
        <item>czk</item>
        <item>dkk</item>
        <item>dop</item>
        <item>egp</item>
        <item>etb</item>
        <item>eur</item>
        <item>gel</item>
        <item>ghs</item>
        <item>gip</item>
        <item>gtq</item>
        <item>hnl</item>
        <item>hkd</item>
        <item>huf</item>
        <item>isk</item>
        <item>inr</item>
        <item>idr</item>
        <item>irr</item>
        <item>iqd</item>
        <item>ils</item>
        <item>jmd</item>
        <item>jpy</item>
        <item>jod</item>
        <item>kzt</item>
        <item>kes</item>
        <item>kwd</item>
        <item>kgs</item>
        <item>lbp</item>
        <item>lsl</item>
        <item>mop</item>
        <item>myr</item>
        <item>mvr</item>
        <item>mur</item>
        <item>mxn</item>
        <item>mdl</item>
        <item>mad</item>
        <item>mzn</item>
        <item>mmk</item>
        <item>nad</item>
        <item>npr</item>
        <item>twd</item>
        <item>nzd</item>
        <item>nio</item>
        <item>ngn</item>
        <item>nok</item>
        <item>omr</item>
        <item>pkr</item>
        <item>pab</item>
        <item>pyg</item>
        <item>pen</item>
        <item>php</item>
        <item>pln</item>
        <item>qar</item>
        <item>ron</item>
        <item>rub</item>
        <item>rwf</item>
        <item>svc</item>
        <item>sar</item>
        <item>rsd</item>
        <item>sgd</item>
        <item>sbd</item>
        <item>zar</item>
        <item>krw</item>
        <item>lkr</item>
        <item>szl</item>
        <item>sek</item>
        <item>chf</item>
        <item>tzs</item>
        <item>thb</item>
        <item>top</item>
        <item>ttd</item>
        <item>tnd</item>
        <item>try</item>
        <item>usd</item>
        <item>ugx</item>
        <item>uah</item>
        <item>aed</item>
        <item>uyu</item>
        <item>uzs</item>
        <item>vuv</item>
        <item>vef</item>
        <item>vnd</item>
        <item>xof</item>
    </string-array>

</resources>