<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general">

        <ListPreference
            android:key="language"
            android:title="@string/language"
            android:entries="@array/language_titles"
            android:entryValues="@array/language_values"
            android:defaultValue="en"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />

        <ListPreference
            android:key="currency"
            android:title="@string/currency"
            android:defaultValue="USD"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />

        <ListPreference
            android:key="cryptoUnit"
            android:title="@string/crypto_unit"
            android:defaultValue="BTC"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/donate">

        <Preference
            android:key="donateBtc"
            android:title="@string/bitcoin"
            android:summary="@string/btc_donate_public_key"/>

        <Preference
            android:key="donateLtc"
            android:title="@string/litecoin"
            android:summary="@string/ltc_donate_public_key"/>

        <Preference
            android:key="donateEth"
            android:title="@string/ethereum"
            android:summary="@string/eth_donate_public_key"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about">

        <Preference
            android:key="share"
            android:title="@string/share"
            android:summary="@string/help_sharing_app"/>

        <Preference
            android:key="review"
            android:title="@string/review"
            android:summary="@string/give_5_stars"/>

        <Preference
            android:key="contact"
            android:title="@string/contact"
            android:summary="@string/send_me_email"/>

        <Preference
            android:key="appVersion"
            android:title="@string/app_version"
            android:selectable="false"/>

    </PreferenceCategory>

</PreferenceScreen>