<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="cafe.adriel.cryp.view.wallet.add.AddWalletActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/vToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/vQrCodeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="?actionBarSize"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/vQrCode"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:padding="20dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_scan_qrcode"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/vTapToScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/vQrCode"
            android:layout_marginTop="20dp"
            android:text="@string/tap_to_scan"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/white"
            android:fontFamily="sans-serif-light"
            app:textAllCaps="true"/>

    </RelativeLayout>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/grey_light"
            app:hintTextAppearance="@style/FloatingLabelTextAppearance">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/vPublicKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?actionBarSize"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:maxLines="1"
                android:singleLine="true"
                android:ellipsize="end"
                android:background="@android:color/transparent"
                android:hint="@string/public_key"
                android:textColor="@android:color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:text="14bSgbk7n59DZ8xK6zZcg6MDQR8c9tAoJj"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/vCoins"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:spinnerMode="dialog"
            app:backgroundTint="@android:color/white"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/vAddWallet"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:text="@string/add_wallet"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            android:fontFamily="sans-serif-medium"
            android:foreground="?selectableItemBackgroundBorderless"
            android:background="@color/colorAccentDark"/>

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.design.widget.CoordinatorLayout>