<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="cafe.adriel.cryp.view.wallet.add.AddWalletActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/vToolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/vQrCodeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="30dp"
        android:focusableInTouchMode="true">

        <android.support.v7.widget.CardView
            android:id="@+id/vCryptocurrenciesLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:foreground="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@color/colorAccentDarkTransparent">

            <RelativeLayout
                android:layout_width="175dp"
                android:layout_height="60dp"
                android:layout_marginStart="3dp"
                android:padding="10dp">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/vLogo"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:scaleType="fitCenter"
                    app:tint="@android:color/white"
                    tools:srcCompat="@drawable/logo_btc"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/vName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/vLogo"
                    android:layout_toStartOf="@id/vArrowRight"
                    android:layout_alignParentTop="true"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="@android:color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:fontFamily="sans-serif-condensed"
                    tools:text="BTC"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/vFullName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/vLogo"
                    android:layout_toStartOf="@id/vArrowRight"
                    android:layout_alignParentBottom="true"
                    android:layout_centerVertical="true"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="@color/grey_extra_light"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    tools:text="Bitcoin"/>

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/vArrowRight"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="5dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/ic_arrow_right"
                    app:tint="@color/grey_light"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/vQrCode"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_below="@id/vCryptocurrenciesLayout"
            android:layout_centerHorizontal="true"
            android:padding="20dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_scan_qrcode"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/vTapToScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/vQrCode"
            android:text="@string/tap_to_scan"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/white"
            android:fontFamily="sans-serif-light"
            app:textAllCaps="true"/>

    </RelativeLayout>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/grey_light"
            app:hintTextAppearance="@style/FloatingLabelTextAppearance">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/vPublicKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?actionBarSize"
                android:maxLines="1"
                android:singleLine="true"
                android:ellipsize="end"
                android:background="@android:color/transparent"
                android:hint="@string/public_key"
                android:textColor="@android:color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textCursorDrawable="@null"
                android:inputType="textNoSuggestions"
                tools:text="15BdmaT9PLzKZdEsirzJ954F3dkkSM6QcS"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/grey_light"
            app:hintTextAppearance="@style/FloatingLabelTextAppearance">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/vFixedBalance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?actionBarSize"
                android:maxLines="1"
                android:singleLine="true"
                android:ellipsize="end"
                android:background="@android:color/transparent"
                android:hint="@string/fixed_balance"
                android:textColor="@android:color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textCursorDrawable="@null"
                android:inputType="numberDecimal"
                tools:text="12345678.12345678"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/vAddWallet"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:text="@string/add_wallet"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            android:fontFamily="sans-serif-medium"
            android:foreground="?selectableItemBackgroundBorderless"
            android:background="@color/colorAccentDark"/>

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.design.widget.CoordinatorLayout>